--- a/requirements.txt
+++ b/requirements.txt
@@ -1,35 +1,121 @@
+acme==1.1.0
 aiocryptopay==0.3.5
 aiogram==2.22.1
 aiohttp==3.8.6
 aioredis==2.0.1
 aiosignal==1.3.1
+amqp==5.2.0
 annotated-types==0.6.0
 APScheduler==3.9.1.post1
 asgiref==3.7.2
 async-timeout==4.0.3
 asyncpg==0.26.0
 attrs==23.2.0
+Automat==0.8.0
 Babel==2.9.1
 backports.zoneinfo==0.2.1
+billiard==4.2.0
+blinker==1.4
+celery==5.4.0
+certbot==0.40.0
+certbot-nginx==0.40.0
 certifi==2023.11.17
 chardet==3.0.4
 charset-normalizer==3.3.2
+click==8.1.7
+click-didyoumean==0.3.1
+click-plugins==1.1.1
+click-repl==0.3.0
+cloud-init==23.1.2
+colorama==0.4.3
+command-not-found==0.3
+ConfigArgParse==0.13.0
+configobj==5.0.6
+constantly==15.1.0
+cryptography==2.8
+dbus-python==1.2.16
+distro==1.4.0
+distro-info===0.23ubuntu1
 Django==4.1
 django-object-actions==4.1.0
+entrypoints==0.3
 frozenlist==1.4.1
+future==0.18.2
+httplib2==0.14.0
+hyperlink==19.0.0
 idna==2.8
+importlib-metadata==1.5.0
+incremental==16.10.1
+Jinja2==2.10.1
+josepy==1.2.0
+jsonpatch==1.22
+jsonpointer==2.0
+jsonschema==3.2.0
+keyring==18.0.1
+kombu==5.3.7
+language-selector==0.1
+launchpadlib==1.10.13
+lazr.restfulclient==0.14.2
+lazr.uri==1.0.3
+MarkupSafe==1.1.0
+mock==3.0.5
+more-itertools==4.2.0
 multidict==6.0.4
+netifaces==0.10.4
+oauthlib==3.1.0
+parsedatetime==2.4
+pbr==5.4.5
+pexpect==4.6.0
 Pillow==9.4.0
+prompt-toolkit==3.0.47
 psycopg2-binary==2.9.3
+pyasn1==0.4.2
+pyasn1-modules==0.2.1
 pydantic==2.6.0
 pydantic-core==2.16.1
+PyGObject==3.36.0
+PyHamcrest==1.9.0
+PyICU==2.4.2
+PyJWT==1.7.1
+pymacaroons==0.13.0
+PyNaCl==1.3.0
+pyOpenSSL==19.0.0
+pyparsing==2.4.6
+pyRFC3339==1.1
+pyrsistent==0.15.5
+pyserial==3.4
+python-apt==2.0.0+ubuntu0.20.4.7
+python-dateutil==2.9.0.post0
+python-debian===0.1.36ubuntu1
+python-dotenv==1.0.1
 pytz==2023.4
+PyYAML==5.3.1
 requests==2.22.0
+requests-toolbelt==0.8.0
+requests-unixsocket==0.2.0
+SecretStorage==2.3.1
+service-identity==18.1.0
+simplejson==3.16.0
 six==1.16.0
+sos==4.3
 sqlparse==0.4.4
+ssh-import-id==5.10
 StrEnum==0.4.15
+systemd-python==234
+Twisted==18.9.0
 typing-extensions==4.9.0
+tzdata==2024.1
 tzlocal==5.2
+ubuntu-advantage-tools==27.9
+ufw==0.36
+unattended-upgrades==0.1
 urllib3==1.25.11
+vine==5.1.0
+wadllib==1.3.3
+wcwidth==0.2.13
 yarl==1.9.4
-celery
+zipp==1.0.0
+zope.component==4.3.0
+zope.event==4.4
+zope.hookable==5.0.0
+zope.interface==4.7.1
